UI: add theme, route jul to log4j